5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1793_1594.log
== TEST (2019-05-30 18:06:21) 
-- CODE:
v=array(eval(input("vetor:  ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:22) 
-- CODE:
from numpy import*
v= array (eval(input("vetor:  ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:35) 
-- CODE:
from numpy import*
v= array (eval(input("vetor:  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:44) 
-- CODE:
from numpy import*
v= array (eval(input("vetor:  ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:49) 
-- CODE:
from numpy import*
v= array (eval(input("vetor:  ")))
i=0
a=0
c=1
while(i<size(v)):
	v[a]=v[a]*c
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:20:16) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
c=1
while(i<size(v)):
	v[a]=v[a]+c
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:07) 
-- CODE:
from numpy import*
v=(eval(input("vetor:  ")))
i=0
a=0
c=1
while(i<size(v)):
	v[a]=v[a]
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:36) 
-- CODE:
from numpy import*
v=array(int(input("vetor:  ")))
i=0
a=0
c=1
while(i<size(v)):
	v[a]=v[a]
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:25:39) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=v[a]*c
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:35) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=v[a]+1
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:11) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=v[a]+1
	a+1
	c+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:30) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:42) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:46) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:21) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i< size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:02) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
	i+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:13) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=x+(v[a]*c)
	a+1
	c+1
	i+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:03) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=x+(v[a]*c)
	a=a+1
	c=c+1
	i=i+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:15) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=x+(v[a]*c)
	a=a+1
	c=c+1
	i=i+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:33:26) 
-- CODE:
from numpy import*
v=array(eval(input("vetor:  ")))
i=0
a=0
x=0
c=1
while(i<size(v)):
	x=x+(v[a]*c)
	a=a+1
	c=c+1
	i=i+1
print(x)
-- EXECUTION TIME:
0.388541
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
